# helix

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  README_zh.md  ai-manus.code-workspace  dev.sh  docker-compose-development.yml  docker-compose-example.yml  docker-compose.yml  install.sh  update.sh
backend/: Dockerfile  README.md  README_zh.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/application/errors/: exceptions.py
backend/app/application/services/: agent_service.py  auth_service.py  email_service.py  file_service.py  plan_service.py  project_service.py  sandbox_registry.py  token_service.py
backend/app/core/: config.py
backend/app/domain/: constants.py
backend/app/domain/errors/: exceptions.py
backend/app/domain/models/: conv_message.py  event.py  memory.py  message.py  plan.py  project.py  session.py  skill.py  tool_result.py
backend/app/domain/repositories/: plan_repository.py  project_repository.py  session_repository.py  skill_repository.py
backend/app/domain/services/: __init__.py  agent_domain_service.py  agent_task_runner.py  plan_service.py  skills.py  workspace_surveyor.py
backend/app/domain/utils/: robust_json_parser.py
backend/app/infrastructure/: logging.py
backend/app/infrastructure/models/: sql.py
backend/app/infrastructure/repositories/: sql_agent_repository.py  sql_plan_repository.py  sql_project_repository.py  sql_session_repository.py  sql_skill_repository.py  sql_user_repository.py
backend/app/infrastructure/skills/: file_skill_repository.py
backend/app/infrastructure/storage/: postgres.py
backend/app/interfaces/: dependencies.py
backend/app/interfaces/api/: auth_routes.py  config_routes.py  (+10 more)
backend/skills/helix-engineering/: SKILL.md
backend/skills/product-spec/: SKILL.md
backend/skills/react-testing/: SKILL.md
backend/skills/react-vite-typescript/: SKILL.md
backend/skills/uv-fastapi-python/: SKILL.md
backend/tests/: test_llm_error_handling.py  test_sandbox_unavailable.py  test_skills.py  test_stream_idle_timeout.py  test_telemetry.py  test_workspace_surveyor.py
helixcli/: README.md  SPEC.md  pyproject.toml
helixcli/src/helixcli/: __init__.py  __main__.py  cli.py  errors.py  git.py  manifest.py  templating.py
sandbox/: Dockerfile  Dockerfile.patch  README.md  README_zh.md  helix-dev-runner.sh  pyproject.toml  supervisord.conf
sandbox/app/: main.py
sandbox/app/api/: router.py
sandbox/app/models/: file.py
sandbox/app/schemas/: file.py
sandbox/app/services/: file.py
(+208 files in other folders)
