[project]
name = "helixcli"
version = "0.1.0"
description = "Deterministic project scaffolder for the Helix sandbox."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "jinja2>=3.1",
    "pydantic>=2.9",
]

[project.scripts]
helixcli = "helixcli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/helixcli"]

[tool.hatch.build.targets.wheel.force-include]
"src/helixcli/templates" = "helixcli/templates"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
