[project]
name = "sandbox"
version = "0.1.0"
description = "Sandbox service for AI Helix"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.121.2",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
    # uvicorn can't upgrade HTTP→WebSocket without an underlying WS
    # implementation. Required by /api/v1/shell/stream (xterm.js pty
    # endpoint) — without it, WS routes silently 404.
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "requests>=2.32.5",
]
